--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             </li>
           </ul>
         </div>
+        <input
+          class="input"
+          name="text"
+          placeholder="Search..."
+          type="search"
+        />
       </div>
       <div class="header-content container">
         <div class="header-img">
@@ -240,7 +246,6 @@
         </div>
       </div>
     </footer>
-
     <script src="./utils/js/scrip.js"></script>
   </body>
 </html>
