--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <title>Dz - Descartables | Aquiles Diaz</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -246,6 +247,6 @@
         </div>
       </div>
     </footer>
-    <script src="./utils/js/scrip.js"></script>
+    <script src="./utils/js/script.js"></script>
   </body>
 </html>
