--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="header-txt">
           <h1>Ofertas Especiales</h1>
-          <p>Los Mejores Vapers , Siempre acá</p>
+          <p>VAPERS DE VERDAD</p>
           <a href="#" class="btn-1">Ver Mas</a>
         </div>
       </div>
@@ -90,6 +90,55 @@
         <div class="ofert-txt">
           <h3>IGNITE V150 15.000 PUFF ICY MINT</h3>
           <a href="#" class="btn-2">Info</a>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="slider">
+        <div class="slide-track">
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
