--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="navbar">
           <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Catalogo</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="./pages/catalogo.html">Catalogo</a></li>
+            <li><a href="./pages/contact.html">Contacto</a></li>
           </ul>
         </nav>
         <div>
