--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,8 +17,8 @@
         <nav class="navbar">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./pages/catalogo.html">Catalogo</a></li>
-            <li><a href="./pages/contact.html">Contacto</a></li>
+            <li><a href="../pages/catalogo.html">Catalogo</a></li>
+            <li><a href="../pages/contact.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
