--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./catalogo.html">Catalogo</a></li>
+            <li><a href="../catalogo.html">Catalogo</a></li>
             <li><a href="../pages/contact.html">Contacto</a></li>
           </ul>
         </nav>
