--- a/index.html
+++ b/index.html
@@ -97,47 +97,47 @@
       <div class="slider">
         <div class="slide-track">
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/appleguava.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+            <img src="./assets/bluedragon.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/greenmango.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+            <img src="./assets/matcha.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/spearmint.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-MENT.png" alt="" />
+            <img src="./assets/mountain.png" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="assets/strawberry.png " alt="" />
           </div>
 
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/appleguava.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/bluedragon.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/greenmango.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/matcha.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/spearmint.png" alt="" />
           </div>
           <div class="slide">
-            <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="./assets/mountain.png" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+            <img src="assets/strawberry.png " alt="" />
           </div>
         </div>
       </div>
@@ -147,10 +147,10 @@
       <h2>Productos</h2>
       <div class="product-content">
         <div class="product">
-          <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          <img src="./assets/frozen.png" alt="" />
           <div class="product-txt">
-            <h3>Lorem, ipsum dolor.</h3>
-            <p class="precio">$200</p>
+            <h3>GEEKBAR PULSE 15000 PUFF FROZEN CHERRY APPLE ICE</h3>
+            <p class="precio">$28,000</p>
             <a href="#" class="agregar-carrito btn-2" data-id="1" =""
               >Agregar al carrito</a
             >
@@ -158,10 +158,10 @@
         </div>
 
         <div class="product">
-          <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          <img src="./assets/cherry.png" alt="" />
           <div class="product-txt">
-            <h3>Lorem, ipsum dolor.</h3>
-            <p class="precio">$200</p>
+            <h3>GEEKBAR PULSE 15000 PUFF BLACK CHERRY</h3>
+            <p class="precio">$28,500</p>
             <a href="#" class="agregar-carrito btn-2" data-id="2" =""
               >Agregar al carrito</a
             >
@@ -169,10 +169,10 @@
         </div>
 
         <div class="product">
-          <img src="./assets/IGNITE-V150-BERRY-BLAST.png" alt="" />
+          <img src="./assets/grape.png" alt="" />
           <div class="product-txt">
-            <h3>Lorem, ipsum dolor.</h3>
-            <p class="precio">$200</p>
+            <h3>GEEKBAR PULSE 15000 PUFF GRAPE LEMON</h3>
+            <p class="precio">$28,600</p>
             <a href="#" class="agregar-carrito btn-2" data-id="3" =""
               >Agregar al carrito</a
             >
